Bug 485720 - Freezes completely when opening a video
Summary: Freezes completely when opening a video
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (show other bugs)
Version: 1.0.2
Platform: Arch Linux Linux
: NOR critical
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-18 09:02 UTC by Konstantin
Modified: 2024-04-18 23:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Konstantin 2024-04-18 09:02:59 UTC
After updating the MPV, when opening Haruna, the MPV opens from above and everything freezes completely.
Comment 1 Arthur Kasimov 2024-04-18 21:28:06 UTC
I have the same issue. After updating to MPV 0.38 all videos are played in a separate MPV window that appears above the main Haruna window. It seems like QML <=> MPV integration is broken. Downgrading to MPV 0.37 fixes the bug.
Comment 2 george fb 2024-04-18 23:52:57 UTC
Git commit b59ae6086ff6e9b1d24769db638b5a5d7021c1a3 by George Florea Bănuș.
Committed on 18/04/2024 at 23:42.
Pushed by georgefb into branch 'master'.

mpv: set vo to libmpv, otherwise mpv creates it's own window

M  +2    -0    src/mpv/mpvitem.cpp
M  +1    -0    src/mpv/mpvpreview.cpp
M  +3    -0    src/mpv/mpvproperties.h

https://invent.kde.org/multimedia/haruna/-/commit/b59ae6086ff6e9b1d24769db638b5a5d7021c1a3