BACKPORT: mpv: set vo to libmpv, otherwise mpv creates it's own window

BUG: 485720